@@ -1,5 +1,5 @@
 .\"
-.\" Sccsid @(#)nroff.1b	1.12 (gritter) 4/26/06
+.\" Sccsid @(#)nroff.1b	1.13 (gritter) 9/4/06
 .\" Derived from troff(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,7 +32,7 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH NROFF 1B "4/26/06" "Heirloom Documentation Tools" "BSD System Compatibility"
+.TH NROFF 1B "9/4/06" "Heirloom Documentation Tools" "BSD System Compatibility"
 .SH NAME
 nroff \- (BSD) format documents for display or line-printer
 .SH SYNOPSIS
@@ -42,11 +42,13 @@ nroff \- (BSD) format documents for display or line-printer
 \fB/usr/ucb/nroff\fR
 [\fB\-ehiqz\fR]
 [\fB\-d\fIaS\fR]
+[\fB\-d\fIa\fB=\fIS\fR]
 [\fB\-F\fIfontdir\fR]
 [\fB\-m\fIname\fR]
 [\fB\-n\fIN\fR]
 [\fB\-o\fIlist\fR]
 [\fB\-r\fIaN\fR]
+[\fB\-r\fIa\fB=\fIN\fR]
 [\fB\-s\fIN\fR]
 [\fB\-T\fIname\fR]
 [\fB\-u\fIN\fR]
@@ -123,10 +125,22 @@ Set register
 (one-character) to
 .IR N .
 .TP
+.BI \-r a = N
+Set register
+.I a
+(may be more than one character) to
+.IR N .
+.TP
 .BI \-d aN
 Define string
 .I a
 (one-character) to
+.IR S .
+.TP
+.BI \-d a = N
+Define string
+.I a
+(may be more than one character) to
 .IR S .
 .TP
 .B \-i
